LoginUserのAPIをディレクトリ移動
